@@ -11,7 +11,7 @@
       class="container"
       nz-popover
       [nzPopoverTitle]="titleTemplate"
-      [nzPopoverContent]="contentTemplate"
+      [nzPopoverContent]="prodInfoTemplate"
       [nzPopoverTrigger]="popoverTrigger"
       [ngClass]="item.colorClass"
       [nzPopoverPlacement]="item.id === 'M' ? 'bottomLeft' : 'bottom'"
@@ -43,7 +43,7 @@
         <strong> {{ item.name }} </strong></span
       >
     </ng-template>
-    <ng-template #contentTemplate>
+    <ng-template #prodInfoTemplate>
       <app-prod-info [unit]="item"></app-prod-info>
     </ng-template>
   </div>
@@ -59,7 +59,13 @@
   </div>
 
   <!-- Districts -->
-  <div class="mainContainer habSpace-color">
+  <div
+    class="mainContainer habSpace-color"
+    nz-popover
+    [nzPopoverTitle]="habTitleTemplate"
+    [nzPopoverContent]="habInfoTemplate"
+    [nzPopoverTrigger]="popoverTrigger"
+  >
     <i nz-icon nzType="fa-s:globe"></i>
     <div class="container">
       <span class="monospace min-width">
@@ -67,7 +73,13 @@
       </span>
     </div>
   </div>
-  <div class="mainContainer metal-color">
+  <div
+    class="mainContainer metal-color"
+    nz-popover
+    [nzPopoverTitle]="miningTitleTemplate"
+    [nzPopoverContent]="miningInfoTemplate"
+    [nzPopoverTrigger]="popoverTrigger"
+  >
     <i nz-icon nzType="my:mining"></i>
     <div class="container">
       <span class="monospace min-width">
@@ -75,7 +87,13 @@
       </span>
     </div>
   </div>
-  <div class="mainContainer energy-color">
+  <div
+    class="mainContainer energy-color"
+    nz-popover
+    [nzPopoverTitle]="energyTitleTemplate"
+    [nzPopoverContent]="energyInfoTemplate"
+    [nzPopoverTrigger]="popoverTrigger"
+  >
     <i nz-icon nzType="my:solar-power"></i>
     <div class="container">
       <span class="monospace min-width">
@@ -107,3 +125,39 @@
     <li nz-menu-item (click)="setCustomBuy(true, 1000, '1000')">Buy 1000</li>
   </ul>
 </nz-dropdown-menu>
+
+<ng-template #habTitleTemplate>
+  <span class="habSpace-color">
+    <i nz-icon nzType="fa-s:globe"></i>
+    <strong> Habitable Space </strong></span
+  >
+</ng-template>
+<ng-template #habInfoTemplate>
+  <app-district-info
+    [district]="ms.game.resourceManager.habitableSpace"
+  ></app-district-info>
+</ng-template>
+
+<ng-template #miningTitleTemplate>
+  <span class="metal-color">
+    <i nz-icon nzType="my:mining"></i>
+    <strong> Mining District </strong></span
+  >
+</ng-template>
+<ng-template #miningInfoTemplate>
+  <app-district-info
+    [district]="ms.game.resourceManager.miningDistrict"
+  ></app-district-info>
+</ng-template>
+
+<ng-template #energyTitleTemplate>
+  <span class="energy-color">
+    <i nz-icon nzType="my:solar-power"></i>
+    <strong> Energy District </strong></span
+  >
+</ng-template>
+<ng-template #energyInfoTemplate>
+  <app-district-info
+    [district]="ms.game.resourceManager.energyDistrict"
+  ></app-district-info>
+</ng-template>
