@@ -1,0 +1,4 @@
+Space Station:
+<span class="monospace percent">
+  {{ district.spaceStationPercent | percent }}
+</span>
