@@ -1,0 +1,3 @@
+.percent {
+  float: right;
+}
