@@ -1,3 +1,5 @@
+-   Districts percent info
+
 3/09/2020
 -   Buy menu on top
 
